# eagle-downloader

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
eagle_downloader/: main.py
eagle_downloader/tests/: main.py
tests/: main.py
